force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Instructions__c</fullName>
    <label>Shipping Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>