force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Alternate_Lines__c.field-meta.xml
<CustomField>
    <fullName>Show_Alternate_Lines__c</fullName>
    <formula>If(Total_of_Alternate_Lines__c &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Alternate Lines</label>
    <type>Checkbox</type>
</CustomField>