force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Drawings__c.field-meta.xml
<CustomField>
    <fullName>Show_Drawings__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Drawings</label>
    <type>Checkbox</type>
</CustomField>