force-app/main/default/objects/SBQQ__Quote__c/fields/Show_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Show_List_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show List Price on Proposal</label>
    <type>Checkbox</type>
</CustomField>