force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Sizings__c.field-meta.xml
<CustomField>
    <fullName>Show_Sizings__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Sizings</label>
    <type>Checkbox</type>
</CustomField>