force-app/main/default/objects/SBQQ__Quote__c/fields/ShowCommercialItemComments__c.field-meta.xml
<CustomField>
    <fullName>ShowCommercialItemComments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Commercial Item Comments</label>
    <type>Checkbox</type>
</CustomField>