force-app/main/default/objects/SBQQ__Quote__c/fields/Sold_By_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Commission_Split__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount (Sold By Rep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>