force-app/main/default/objects/SBQQ__Quote__c/fields/Sold_by_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sold_by_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record that corresponds to SBQQ__SalesRep__c.  Possibly replace with  the SBQQ__SalesRep__c altogether.</description>
    <label>Sold by Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Sold by Representative)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>