force-app/main/default/objects/SBQQ__Quote__c/fields/Start_Quote_To_Order_Process__c.field-meta.xml
<CustomField>
    <fullName>Start_Quote_To_Order_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Quote-To-Order Process</label>
    <type>Checkbox</type>
</CustomField>