force-app/main/default/objects/SBQQ__Quote__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <formula>IF( OR(ISPICKVAL(SBQQ__Status__c,&quot;Cancelled&quot;),ISPICKVAL(SBQQ__Status__c,&quot;Change Order&quot;)), &quot;N&quot;, &quot;A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Code</label>
    <type>Text</type>
</CustomField>