force-app/main/default/objects/SBQQ__Quote__c/fields/Terms_and_Conditions_Review__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Review__c</fullName>
    <label>Terms and Conditions Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Rep order, CDC Terms and Conditions apply</fullName>
            </value>
            <value>
                <fullName>2. Customer order, CDC Terms and Conditions apply</fullName>
            </value>
            <value>
                <fullName>3. Customer order, Negotiated Terms and Conditions apply and are attached in Salesforce</fullName>
            </value>
            <value>
                <fullName>4. Customer order, customer Terms and Conditions apply and are attached in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>