force-app/main/default/objects/SBQQ__Quote__c/fields/Terms_and_Conditions_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Review_Date__c</fullName>
    <label>Terms and Conditions Review Date</label>
    <type>Date</type>
</CustomField>