force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <label>Total Charges</label>
    <summarizedField>Charge__c.Total_Charge_Flow__c</summarizedField>
    <summaryFilterItems>
        <field>Charge__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Charge__c.Parent_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>