force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <label>Total Credits (USD)</label>
    <summarizedField>Credits_and_Booking__c.Amount_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Credits_and_Booking__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Credits_and_Booking__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>