force-app/main/default/objects/SBQQ__Quote__c/fields/Total_of_Alternate_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Alternate_Lines__c</fullName>
    <label>Total # of Alternate Lines</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Alternate</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>