force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Quote_Line_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Line_Bookings__c</fullName>
    <inlineHelpText>Total of all Primary Quote Lines</inlineHelpText>
    <label>Total of all Primary QL Ext. Net Price</label>
    <summarizedField>SBQQ__QuoteLine__c.Regular_Total_Price_USD__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Change_Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancel</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>