force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Quote_Line_Bookings_Cust_Curr__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Line_Bookings_Cust_Curr__c</fullName>
    <formula>Text(Currency__c) &amp; &quot; &quot; &amp; 
IF( 
 (Total_Quote_Line_Bookings__c *  Conversion_Rate__c) &gt;= 1000000, 
  TEXT(FLOOR((Total_Quote_Line_Bookings__c *  Conversion_Rate__c)/ 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  (Total_Quote_Line_Bookings__c *  Conversion_Rate__c) &gt;= 1000, 
  RIGHT(TEXT(FLOOR((Total_Quote_Line_Bookings__c *  Conversion_Rate__c) / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR((Total_Quote_Line_Bookings__c *  Conversion_Rate__c))), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD((Total_Quote_Line_Bookings__c *  Conversion_Rate__c) , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD((Total_Quote_Line_Bookings__c *  Conversion_Rate__c) , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD((Total_Quote_Line_Bookings__c *  Conversion_Rate__c) , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total QL Ext. Net Price (Cust Curr)</label>
    <type>Text</type>
</CustomField>