force-app/main/default/objects/SBQQ__Quote__c/fields/Use_Custom_Terms__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Terms</label>
    <type>Checkbox</type>
</CustomField>