force-app/main/default/objects/SBQQ__Quote__c/fields/Wanted_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Wanted_Delivery_Date__c</fullName>
    <defaultValue>ADDMONTHS( TODAY() ,2)</defaultValue>
    <description>Date customer requests delivery</description>
    <label>Wanted Delivery Date</label>
    <type>Date</type>
</CustomField>