force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Lock_Order.recordType-meta.xml
<RecordType>
    <fullName>Lock_Order</fullName>
    <active>true</active>
    <description>This record type is set when change order is initiated on a quote which results in a cloned quote</description>
    <label>Lock Order (Change Order Initiated)</label>
</RecordType>