force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Order_Submitted.recordType-meta.xml
<RecordType>
    <fullName>Order_Submitted</fullName>
    <active>true</active>
    <description>Coincides with the Order Submitted SBQQ Status</description>
    <label>Order Submitted</label>
</RecordType>