force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Partner_Submitted.recordType-meta.xml
<RecordType>
    <fullName>Partner_Submitted</fullName>
    <active>true</active>
    <description>An intermediate step for partners.  This will allow a read-only layout for Partners, and a layout like &quot;Pending&quot; for Inside Sales.</description>
    <label>Partner Submitted</label>
</RecordType>