force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Pending_Approval.recordType-meta.xml
<RecordType>
    <fullName>Pending_Approval</fullName>
    <active>true</active>
    <description>Coincides with the Pending Approvals SBQQ Status</description>
    <label>Pending Approval</label>
</RecordType>