force-app/main/default/objects/SBQQ__Quote__c/validationRules/Block_Q_Edit_by_Internals_after_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Q_Edit_by_Internals_after_Pending</fullName>
    <active>false</active>
    <errorConditionFormula>Text($User.UserType) = &apos;Standard&apos; &amp;&amp;  Text(SBQQ__Status__c) &lt;&gt; &apos;Pending&apos; &amp;&amp;  ($Profile.Name = &apos;CDC Engineering&apos; || $Profile.Name = &apos;CDC Production Planing&apos; || $Profile.Name = &apos;CDC Inside Sales&apos;)</errorConditionFormula>
    <errorMessage>Quote is submitted for approval. If Quote is already not Approved, please Revise Approval to make further edits.</errorMessage>
</ValidationRule>