force-app/main/default/objects/SBQQ__Quote__c/validationRules/Contains_Nonpriced_Lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Contains_Nonpriced_Lines</fullName>
    <active>false</active>
    <description>Has_Zero_Priced_Lines__c  &gt; 0</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Has zero priced lines greater than zero</errorMessage>
</ValidationRule>