force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Net_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Net_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>SBQQ__NetAmount__c  = 0</errorConditionFormula>
    <errorMessage>Quote Net Amount should be 0</errorMessage>
</ValidationRule>