force-app/main/default/objects/SBQQ__Quote__c/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>TRUE</errorConditionFormula>
    <errorMessage>Handle this in a more better UX</errorMessage>
</ValidationRule>