force-app/main/default/objects/SBQQ__Quote__c/listViews/Active_Quotes.listView-meta.xml
<ListView>
    <fullName>Active_Quotes</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>SBQQ__Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Active Quotes</label>
</ListView>