force-app/main/default/objects/SBQQ__Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>Brand__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>SBQQ__Primary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Total_Charges__c</columns>
    <columns>Total_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>