force-app/main/default/objects/SBQQ__Quote__c/listViews/Commercial_Approval.listView-meta.xml
<ListView>
    <fullName>Commercial_Approval</fullName>
    <columns>Brand__c</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Total_Amount__c</columns>
    <columns>Inside_Sales_Approver__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_Executive__c</columns>
    <columns>AccountName__c</columns>
    <columns>End_User_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Division__c</columns>
    <columns>Total_Quote_Line_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Pending Approvals</value>
    </filters>
    <label>Quote Commercial Approval</label>
</ListView>