force-app/main/default/objects/SBQQ__Quote__c/listViews/In_Process_Inside_Sales.listView-meta.xml
<ListView>
    <fullName>In_Process_Inside_Sales</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Rep_Code__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>Eng_Review_Status__c</columns>
    <columns>Inside_Sales_Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>SBQQ__Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Pending,Partner Submitted</value>
    </filters>
    <label>Inside Sales - In Process</label>
</ListView>