force-app/main/default/objects/SBQQ__Quote__c/listViews/Inside_Sales_Returned_from_Engineering.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Returned_from_Engineering</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Assigned_Estimator1__c</columns>
    <columns>Rep_Code__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Eng_Review_Status__c</columns>
    <columns>Inside_Sales_Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>SBQQ__Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eng_Review_Status__c</field>
        <operation>equals</operation>
        <value>On Hold - Sales,Completed</value>
    </filters>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Partner Submitted</value>
    </filters>
    <filters>
        <field>Prod_Planning_Status__c</field>
        <operation>notEqual</operation>
        <value>In Review</value>
    </filters>
    <label>Rep Quotes - Returned from Engineering</label>
</ListView>