force-app/main/default/objects/SBQQ__Quote__c/listViews/Partner_Order_Submitted.listView-meta.xml
<ListView>
    <fullName>Partner_Order_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Brand_Order_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Rep_Code__c</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inside_Sales_Approver__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Ordering_District__c</columns>
    <columns>Project_Classification__c</columns>
    <columns>Total_Bookings__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SBQQ__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Customer_s_PO_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inside Sales - Ready for Order</label>
</ListView>