force-app/main/default/objects/SBQQ__Quote__c/listViews/Partner_Submitted.listView-meta.xml
<ListView>
    <fullName>Partner_Submitted</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Status__c</field>
        <operation>equals</operation>
        <value>Partner Submitted</value>
    </filters>
    <label>Partner Submitted</label>
</ListView>