force-app/main/default/objects/SBQQ__Quote__c/listViews/Quotes_Created_Today.listView-meta.xml
<ListView>
    <fullName>Quotes_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>Brand__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SBQQ__BillingName__c</columns>
    <columns>End_User_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Order_Type__c</columns>
    <columns>SBQQ__Partner__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Total_Bookings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Quotes Created Today</label>
</ListView>